Completed UI for detail and listing. Added support for offline as well.
Signed-off-by: Aftab Ali <aftab.a.sikander@gmail.com>

--- a/app/src/main/res/layout/category_fragment.xml
+++ b/app/src/main/res/layout/category_fragment.xml
@@ -67,6 +67,7 @@
                 android:backgroundTint="@color/colorAccent"
                 android:layout_margin="@dimen/spacing_large"
                 app:fabSize="normal"
+                app:elevation="@dimen/card_elevation"
                 android:visibility="gone"
                 android:src="@drawable/ic_camera_24px"
                 app:tint="@color/white"
