--- a/app/src/main/res/layout/category_fragment.xml
+++ b/app/src/main/res/layout/category_fragment.xml
@@ -54,7 +54,7 @@
                         app:popupTheme="@style/ToolbarThemeOverlay"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:tabMode="scrollable"
+                        app:tabGravity="fill"
                         android:layout_gravity="top"/>
 
             </androidx.viewpager.widget.ViewPager>
