--- a/app/src/main/res/layout/category_detail_fragment.xml
+++ b/app/src/main/res/layout/category_detail_fragment.xml
@@ -18,7 +18,7 @@
                 android:layout_centerInParent="true"
                 android:indeterminateTint="@color/colorPrimary"
                 android:indeterminateTintMode="src_in"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/errorText"
@@ -28,7 +28,7 @@
                 android:layout_margin="@dimen/spacing_10dp"
                 android:text="@{resource.message}"
                 android:textSize="@dimen/text_size_16sp"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:textStyle="bold"/>
 
         <androidx.recyclerview.widget.RecyclerView
